TSPS-195 Validate user-provided inputs (#75)